fix: update link background color for improved visibility

--- a/html-css/Alura/Repositorio/style.css
+++ b/html-css/Alura/Repositorio/style.css
@@ -17,7 +17,7 @@ body{
     color: #22D4FD ;
 }
 a{
-    background-color: #22D4FD;
+    background-color: #0d5666;
     color: #E2E2E2;
     padding: 1rem;
 }
